[package]
name = "union_find"
description = "provides the union and find operations for a disjoint set"
version = "0.5.0"
authors = ["Soham Roy (https://keybase.io/sohamroy) <sohamroy@sohamroy.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]